ch6_security/lab6.6/security-review1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: securityreview
spec:
  serviceAccount: securityaccount
  securityContext:
    runAsUser: 0 #root
  containers:
    - name: webguy
      image: nginx
      securityContext:
        runAsUser: 0
        allowPrivilegeEscalation: false
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
