ch6_security/lab6.6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    app: webserver
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
